move dedicated partition flag to dataset metadata